src/test/ui/specialization/specialization-overlap-negative.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/specialization-overlap-negative.rs:2:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0751]: found both positive and negative implementation of trait `std::marker::Send` for type `TestType<_>`:
  --> $DIR/specialization-overlap-negative.rs:9:1
   |
LL | unsafe impl<T: Clone> Send for TestType<T> {}
   | ------------------------------------------ positive implementation here
LL | impl<T: MyTrait> !Send for TestType<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ negative implementation here

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0751`.
